--- a/readme.org
+++ b/readme.org
@@ -65,3 +65,15 @@
 *** disadvantage
 
  - The disadvantage is that you are confined to the packages that you use.
+
+* LICENSE
+
+    copyright (C)  2016 - Filipe Correa Lima da Silva
+    Permission is granted to copy, distribute and/or modify this document
+    under the terms of the GNU Free Documentation License, Version 1.3
+    or any later version published by the Free Software Foundation;
+    with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+    A copy of the license is included in the section entitled "GNU
+    Free Documentation License".
+
+[[https://www.gnu.org/licenses/fdl.html#addendum][GNU Free Documentation License - 1.3]]
