--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 * Setting up emacs behind a draconian corporate firewall or proxy or both
   - =important note:= do check upfront if these procedures are ok within your company's security policies.
 
-** Using Spacemacs elpa mirror
+** Using d12frosted elpa mirror
 *** setup
 
   1. git clone [[https://github.com/d12frosted/elpa-mirror][d12frosted' elpa mirror]] or just put the repo inside an usb stick and place the repo in the =~/.emacs.d/mirror-elpa= folder.
